fix: img author alignment

--- a/src/app/modules/posts/components/post-main-card/post-main-card.component.scss
+++ b/src/app/modules/posts/components/post-main-card/post-main-card.component.scss
@@ -52,7 +52,6 @@ mat-card.main-card {
 
     div {
       position: relative;
-      bottom: 0.6rem;
 
       span {
         display: block;
